hello-node/hello-node_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-node-ingress
spec:
  rules:
    - http:
        paths:
          - path: /hello-node/
            pathType: Prefix
            backend:
              service:
                name: hello-node
                port:
                  number: 8080
